add get charge histories api spec
